tests/js_error/parser/setter_disallow_rest_parameter.exp
SyntaxError: Setter functions must have exactly one parameter
  ┌ parser/setter_disallow_rest_parameter.js:1:4
  |
1 | ({ set f(...rest){} })
  |    ^